# ddpg_ros2

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
ddpg_ros2/: respawn_goal.py  tb3_ddpg.py  tb3_gym_env.py  utils.py
launch/: tb3_ddpg_launch.py
models/: model.config
msg/: Observation.msg
nodes/: respawn_goal.py  tb3_ddpg.py  tb3_gym_env.py  utils.py
src/: ddpg_turtlebot3.cpp  service_sync_call.py
srv/: EnvironmentObservation.srv
